# shop_back

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_07_16_2309-47a35f613372_init.py  2025_07_17_1016-0ef2265bed68_add_products.py  2025_07_18_1409-526993ab1578_add_basket.py
app/: dependencies.py  main.py
app/api/: __init__.py
app/api/v1/: basket_router.py  product_router.py  user_router.py
app/core/: config.py  db_settings.py
app/core/models/: __init__.py  basket.py  product.py  users.py
app/crud/: basket_crud.py  product_crud.py  user_crud.py
app/schemas/: basket_schemas.py  product_schemas.py  user_schemas.py
app/services/: basket_service.py  product_service.py  user_service.py
tests/: test_api.py
